# control-tower

./: .gitignore  AGENTS.md  README.md  control-tower-memory-sync-issue.md  pyproject.toml  setup.sh
.control-tower/docs/state/: current-status.md  decisions.md  known-risks.md  open-questions.md
.control-tower/docs/tasks/: active.md  completed.md
.control-tower/logs/: black-box.jsonl
.control-tower/memory/: l0.md  l1.md
.control-tower/packets/outbox/: builder-pr17-cursor-fix.json  builder-pr17-cursor-fix.result.json  builder-refresh-codex-init-models.json  builder-refresh-codex-init-models.result.json  git-master-checkin-codex-init-models-and-state.json  git-master-checkin-rollout.json  git-master-checkin-rollout.result.json  git-master-pr17-cursor-fix-push.json  git-master-pr17-cursor-fix-push.result.json  git-master-push-all-rollout-artifacts.json  git-master-push-all-rollout-artifacts.result.json  git-master-sync-main-after-pr17.json  (+22 more)
.control-tower/state/: project.json  runtime.json  session-index.json  task-ledger.json
docs/: index.md
docs/product-specs/: index.md
scripts/: bootstrap_remote_install.sh  install_tower.sh
src/control_tower/: __init__.py  agents.py  backends.py  bootstrap.py  cli.py  codex_cli.py  config_ui.py  docs_harness.py  graph.py  layout.py  memory.py  packets.py  project.py  prompts.py  runtime_cli.py  sessions.py
src/control_tower.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_bootstrap.py
ui/: package-lock.json  package.json
ui/src/: app.tsx  constants.ts  index.ts  types.ts
(+67 files in other folders)
