[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "control-tower"
version = "0.1.0"
description = "Codex-powered multi-agent orchestration bootstrap"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
tower-bootstrap = "control_tower.cli:main"
tower-run-bootstrap = "control_tower.runtime_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
control_tower = ["templates/project/**/*"]
